--- a/quiz.css
+++ b/quiz.css
@@ -207,8 +207,8 @@ h2 {
 
 /* ✅ 字母格樣式 */
 .letter-box {
-    width: 21px;
-    height: 21px;
+    width: 20px !important;
+    height: 24px !important;
     text-align: center;
     font-size: 26px;
     border: 1px solid #ccc;
