--- a/quiz.css
+++ b/quiz.css
@@ -209,8 +209,7 @@ h2 {
 .letter-box {
     width: 24px !important;/* 避免 iOS 縮放 */
     height: 24px !important;/* 避免 iOS 縮放 */
-    box-sizing: border-box !important;/* 避免 iOS 縮放 */
-    font-size: 24px !important;  /* 避免 iOS 縮放 */
+    font-size: 24px 
     text-align: center;
     border: 1px solid #ccc;
     margin: 2px;
