--- a/index.css
+++ b/index.css
@@ -286,23 +286,21 @@ h1 { /* 設定標題的樣式，置中並使用深色背景 */
 }
 
 #noteContainer {
-    background: #f2f2f2;
-    padding: 10px; /* 内部四周的间距 */
+    width: 360px;
+    background: #e7e7e7;
+    padding: 10px;
     border-radius: 8px;
-    margin-top: 5px; /* `noteContainer` 与上方元素的外部间距 */
+    margin-top: 5px;
     max-height: 120px;
     overflow: hidden;
+    margin-left: -5px;
 }
 
 #wordNote {
-    background: #f2f2f2; /* 改成淺灰色 */
-    width: 100%;
-    height: 80px; /* 縮小筆記區 */
-    height: 80px; /* 縮小筆記區 */
+    background: transparent;
     font-size: 16px;
     line-height: 1.2em;
     padding: 5px;
-    border-radius: 5px;
     border: none; /* 移除外框線 */
     resize: none;
 }
