--- a/quiz.css
+++ b/quiz.css
@@ -303,10 +303,11 @@ h2 {
     border-color: #ff002b;
 }
 
+
 /* 讓每個單詞區塊有適當間隔 */
 .word-container {
     display: inline-flex;
-    gap: 5px;
+    gap: 3px;
     margin: 0 10px;
     align-items: center;
 }
@@ -329,4 +330,21 @@ h2 {
     text-decoration: underline;
 }
 
+.correct-letter {
+    color: black;
+    font-weight: bold;
+    text-decoration: underline;
+}
 
+.wrong-letter {
+    color: red;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+
+.punctuation {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0 5px;
+}
