--- a/quiz.css
+++ b/quiz.css
@@ -149,7 +149,7 @@ h1, h2 {
     letter-spacing: 4px;
 }
 
-#wordInput, #sentenceInput {
+#wordInput {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -159,6 +159,18 @@ h1, h2 {
     margin: auto;
     padding: 5px;
     text-align: center;
+}
+
+#sentenceInput {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    gap: 1px;
+    width: 95%;
+    max-width: 380px;
+    margin: 5px;
+    padding: 1px;
+    text-align: left;
 }
 
 .letter-box {
@@ -486,4 +498,9 @@ input[type="checkbox"]:checked + span {
     width: 100%;
     text-align: left; /* 左對齊句子內容 */
     padding: 8px 10px; /* 增加內距以適應寬度 */
+}
+
+.playing {
+    background-color: #00BFFF !important;
+    color: white !important;
 }
